<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ONLance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pontosCorrido">Pontos Corridos</string>
    <string name="pontosCorrido_UPPER">PONTOS CORRIDOS</string>
    <string name="campeonato">Campeonato</string>
    <string name="campeonato_UPPER">CAMPEONATO</string>
    <string name="configuracao_partida">Configuração da Partida</string>
    <string name="copa">Copa</string>
    <string name="copa_UPPER">COPA</string>
    <string name="selecao_times">Seleção de Times</string>
    <string name="por_equipe">Por Equipe</string>
    <string name="por_equipe_hint">Não esqueça, goleiro também é um jogador!</string>
    <string name="amistoso">Amistoso</string>
    <string name="amistoso_UPPER">AMISTOSO</string>
    <string name="quantJogadores">Quantidade de Jogadores</string>
    <string name="quantJogadores_UPPER">QUANTIDADE DE JOGADORES</string>
    <string name="terminoPartida">O jogo termina quando</string>
    <string name="terminoPartida_UPPER">QUANDO O JOGO TERMINA?</string>
    <string name="tempo">Tempo</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_hint">Compartilhe sua diversão com seus amigos!</string>
    <string name="gol">GOL</string>
    <string name="placar_0">0</string>
    <string name="plus">+</string>
    <string name="ou">ou</string>
    <string name="por_gol">Por Gol</string>
    <string name="por_gol_hint">Vence quem fizer o(s) gol(s) primeiro!</string>
    <string name="por_tempo">Por Tempo</string>
    <string name="por_tempo_hint">Escolha o tempo máximo em minutos!</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="entrar_UPPER">ENTRAR</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="faca_cadastro">Faça seu cadastro!</string>
    <string name="nome_usuario">Nome de usuário</string>
    <string name="entrar_face">Entrar com o Facebook</string>
    <string name="app_id">1538220866423022</string>
    <string name="encerramentoPartida">Encerramento da Partida</string>
    <string name="compartilhamento_UPPER">COMPARTILHAMENTO</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="time_fragment">Times</string><string name="jogador_fragment">Jogadores</string><string name="prosseguir_UPPER">PROSSEGUIR</string>
    
    

</resources>