<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantJogadores"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/quantJogSpnieer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encerramentoPartida"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo" />

        <Spinner
            android:id="@+id/quantTempoSpnieer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
         
          
        <CheckBox
            android:id="@+id/checkBoxGol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gol" />

        <Spinner
            android:id="@+id/quantGolSpnieer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
     </LinearLayout>

</LinearLayout>