<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/quantJogadores"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porEquipe" />

        <Spinner
            android:id="@+id/quantJogSpnieer"
            android:layout_width="132dp"
            android:layout_height="32dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/terminoPartida"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkBoxGol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gol" />

            <Spinner
                android:id="@+id/quantGolSpnieer"
                android:layout_width="132dp"
                android:layout_height="32dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkBoxTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempo" />

            <Spinner
                android:id="@+id/quantTempoSpnieer"
                android:layout_width="132dp"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/compartilharFacebook"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="prosseguir"
            android:text="V"
            android:textColor="#fff" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="66" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/configuracao_partida"
        android:textColor="#AAAAAA" />

</LinearLayout>